[tool.poetry]
name = "safe_neural_repo"
version = "0.1.0"
description = "Safe modular neural project"
authors = ["PowerProgress <progresspower5g@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "hal" },
    { include = "processing" },
    { include = "safety" }
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.12.0"
pre-commit = "^4.0.1"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --disable-warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
